--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,22 +5,25 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md
-            "name": ".NET Core Launch (console)",
+            "name": ".NET Debugger (stacker)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/csharp/bin/Debug/net8.0/FSPyramid.dll",
-            "args": [],
+            "args": "../example",
             "cwd": "${workspaceFolder}/csharp",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "internalConsole",
+            "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach"
+            "name": "Python Debugger (stacker)",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "python/stacker.py",
+            "args": ["example"],
+            "console": "integratedTerminal"
         }
     ]
 }
