--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,12 +29,7 @@
             "label": "watch",
             "command": "dotnet",
             "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "--project",
-                "${workspaceFolder}/csharp/FSPyramid.sln"
-            ],
+            "args": ["watch", "run", "--project", "${workspaceFolder}/csharp/FSPyramid.sln"],
             "problemMatcher": "$msCompile"
         }
     ]
