--- a/csharp/FSPyramid.csproj
+++ b/csharp/FSPyramid.csproj
@@ -1,16 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="NumSharp" Version="0.30.0" />
-    <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
-    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="NumSharp" Version="0.30.0"/>
+        <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616"/>
+        <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616"/>
+    </ItemGroup>
 
 </Project>
